[package]
name = "fog-crypto"
version = "0.0.1"
authors = ["Scott Teal"]
readme = "README.md"
keywords = [ "crypto", "fog-tools"]
categories = [ "cryptography" ]
repository = "https://github.com/Cognoscan/fog-crypto"
documentation = "http://docs.rs/fog-crypto"
license = "MIT OR Apache-2.0"
description = ""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
constant_time_eq = "0.1.3"
blake2-rfc = "0.2.18"
libsodium-sys = "0.2.2"
byteorder = "1"

[dev-dependencies]
tempfile = "3.0.8"
rand = "0.7"
rand_distr = "0.2"
colored = "1.7"
hex = "0.3.2"
serde_json = "1.0"
