[package]
name = "fog-crypto"
version = "0.4.0"
authors = ["Scott Teal"]
readme = "README.md"
keywords = [ "crypto", "fog-tools"]
categories = [ "cryptography" ]
repository = "https://github.com/Cognoscan/fog-crypto"
documentation = "http://docs.rs/fog-crypto"
license = "MIT OR Apache-2.0"
description = "Utilities to make signing & encryption easier for small, independent blocks of bytes. Primary use-case is the fog-pack library."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["with-serde"]
with-serde = ["serde", "serde_bytes", "base64"]

[dependencies]
byteorder = "1"
subtle = "2.4"
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
blake2 = "0.9"
chacha20poly1305 = { version = "0.7", features = ["xchacha20poly1305"] }
ed25519-dalek = "1"
x25519-dalek = "1"
bs58 = "0.4"
rand_core = "0.5"
serde = { version = "1.0", optional = true }
serde_bytes = { version = "0.11", optional = true }
base64 = { version = "0.13.0" , optional = true }

[dev-dependencies]
tempfile = "3"
rand = "0.7"
rand_distr = "0.4"
colored = "2"
hex = "0.4"
serde_json = "1.0"
bincode = "1.3.1"
