[package]
name = "fog-crypto"
version = "0.5.2"
authors = ["Scott Teal"]
readme = "README.md"
keywords = [ "crypto", "fog-tools"]
categories = [ "cryptography" ]
repository = "https://github.com/Cognoscan/fog-crypto"
documentation = "http://docs.rs/fog-crypto"
license = "MIT OR Apache-2.0"
description = "Utilities to make signing & encryption easier for small, independent blocks of bytes. Primary use-case is the fog-pack crate."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["with-serde", "getrandom"]
with-serde = ["serde", "serde_bytes", "base64"]
getrandom = ["rand_core/getrandom", "chacha20poly1305/getrandom", "x25519-dalek/getrandom"]

[dependencies]
byteorder = "1"
subtle = "2.4"
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
blake2 = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
bs58 = "0.5"
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", optional = true }
serde_bytes = { version = "0.11", optional = true }
base64 = { version = "0.21.0" , optional = true }

[dev-dependencies]
tempfile = "3"
rand = "0.8"
rand_distr = "0.4"
colored = "2"
hex = "0.4"
serde_json = "1.0"
bincode = "1.3.1"
